@@ -1,3 +1,12 @@
+- Guessindent no longer overrides istep if indendation is space.
+
+- Fix low limit of lmargin
+
+- Allow inserting file in rectangle mode even if selected rectangle is
+  zero-width.
+
+- .js is Javascript
+
 - Fix ^G in perl mode when you hit it on second brace in:
 	{\'
 	\'}
